--- a/Exercises/Background/StTFreltn.html
+++ b/Exercises/Background/StTFreltn.html
@@ -15,13 +15,19 @@
     <var id="CHOICESINDEX">randRange(0,6)</var>
     <var id="CHOICES">["Relation isBrotherOf on the set of people " ,
                        "Relation isFatherOf on the set of people ",
-                       "Relation R = {&lt; x, y &gt; | x^2 + y^2 = 1  } for real numbers x and y " ,
-                       "Relation R = {&lt; x, y &gt; | x^2 = y^2  } for real numbers x and y ",
-                       "Relation R = {&lt; x, y &gt; | x mod y =0 } for x,y &#8712; {1,2,3,4} ",
+                       "Relation R = {&lt; x, y &gt; | x^2 + y^2 = 1} for real numbers x and y " ,
+                       "Relation R = {&lt; x, y &gt; | x^2 = y^2} for real numbers x and y ",
+                       "Relation R = {&lt; x, y &gt; | x mod y =0} for x,y &#8712; {1,2,3,4} ",
                        "Empty relation &#8709; (i.e., the relation with no ordered pairs for which it is true) on the set of integers ",
                        "Empty relation &#8709; (i.e., the relation with no ordered pairs for which it is true) on the empty set "] </var>
       
-    <var id="ANSWER"> [ ["False", "False", "False" , "True"], ["False", "False", "True" , "False"], ["False", "True", "False" , "True"], ["True", "True" , "False" ,"True"], ["True","False","True","True"],["False","True", "True" , "True"] ,["True","True", "True" , "True"] ] </var>
+    <var id="ANSWER"> [ ["False", "False", "False", "True"],
+                        ["False", "False", "True",  "False"],
+                        ["False", "True",  "False", "False"],
+                        ["True",  "True" , "False", "True"],
+                        ["True",  "False", "True",  "True"],
+                        ["False", "True",  "True",  "True"],
+                        ["True",  "True",  "True",  "True"] ] </var>
   </div>
   <div class="problems">
     <div id="problem-type-or-description">
