testing graph PEs

--- a/AV/Development/PrimAVPE.html
+++ b/AV/Development/PrimAVPE.html
@@ -27,10 +27,9 @@
         <div class="jsavcanvas">
           <p class="instructLabel">Instructions:</p>
           <p class="instructions">
-            Reproduce the behavior of Prim's Algorithm for the given graph below.
+            Reproduce the behavior of Prim's Algorithm for the given graph below. Just Click on the appropriate Graph Nodes to add to the MST. 
           </p>
           <p id="procontrols">
-            <input id="decrement" type="button" value="Decrement heap size" />
             <span class="jsavscore"></span>
           </p>
         </div>
