--- a/Exercises/List/listLinkedDeletion.html
+++ b/Exercises/List/listLinkedDeletion.html
@@ -483,12 +483,19 @@ Written by Junyang Chen and Cliff Shaffer
   <div class="problems">
     <div> <!-- Supresses answer box -->
       <p class="problem" id = "test">Your task in this exercise is to show the
-        behavior for Linked list deletion.
-        In the List displayed below, the "current" position is <b><var>curr_pos</var></b>.</p>
+        behavior for Linked list deletion. You must delete the element
+        in the current position.
+      </p>
       <div class="question">
-	    <p>Delete the element in current position, which is position <b><var>curr_pos</var></b>.</p>
-        <p>To move an element, click on it (to highlight it), then click on where you
-        want it to go. You can make a node poiting to "null" by firstly clicking the pointer area of the node and then clicking the "makenull" button. To change the target of labels, such as "curr" and "tail", click on the label(to highlight it), then click on the node you want it to point to.</p>
+        <p>To move an element, click on it (to highlight it), then
+          click on the element position in the node where you want it to
+          go.
+          You can make a node's "next" pointer point to "null" by
+          first clicking the pointer for the node and then
+          clicking the "makenull" button.
+	  To change the target of labels, such as "curr" and "tail",
+          click on the label (to highlight it), then click on the node
+          you want it to point to.</p> 
         <input id="reset" type="button" value="Reset" />
 		<input id="makenull" type="button" value="makenull" />
         <div id="jsav" style = "{background-color : #333}"></div>
