--- a/Exercises/List/listLinkedInsertion.html
+++ b/Exercises/List/listLinkedInsertion.html
@@ -405,20 +405,20 @@ function checkAnswer(arr_size) {
       <div id = "yy"></div>
       <p class="problem" id = "test">Your task in this exercise is to show the
         behavior for Linked list insertion.
-        In the List displayed below, the "current" position
-        is <b><var>insert_pos</var></b>.</p>
+	You must insert the element to the current position.
+      </p>
       <div class="question">
-	<p>Insert <b><var>insert_value</var></b> into current
-	position, which is position <b><var>insert_pos</var></b>.</p>
-        <p>To move a node value, click on it (to highlight it), then
-        click on where you want it to go. You can insert the new
-        value <b><var>insert_value</var></b> into a highlighted
-        node by clicking the "Insert" button.
-	You can create a new link node by clicking the "NewNode"
-	button.
-	To change a pointer, click on its box (on the right side of
-        the node) to highlight it, then click on the node that you
-        want it to point to.</p>
+        <p>To move an element, click on it (to highlight it), then
+          click on the element position in the node where you want it to
+          go.
+	  You can insert the new value <b><var>insert_value</var></b>
+          into a highlighted node by clicking the "Insert" button.
+	  You can create a new link node by clicking the "NewNode"
+	  button.
+	  To change a pointer, click on its box (on the right side of
+          the node) to highlight it, then click on the node that you
+          want it to point to.
+	</p>
         <input id="reset" type="button" value="Reset" />
 		<input id="NewNode" type="button" value="NewNode" />		
 		<input id="insert" type="button" value="Insert" />
