Update JSAV to 0.7.0-2; list exercise and AV tweaks

--- a/Exercises/List/listLQueueEnqueue.html
+++ b/Exercises/List/listLQueueEnqueue.html
@@ -105,11 +105,11 @@ function pclick(pointer){
 // Helper function for seting pointer
 function setPointer(name, node, opt){
   var pointerRight = {anchor: "right top",
-    myAnchor: "left bottom",
+    myAnchor: "left bottom", fixed: "true",
     left: -10,
     top: -20};
   var pointerLeft = {anchor: "left top",
-    myAnchor: "right bottom",
+    myAnchor: "right bottom", fixed: "true",
     left: 15,
     top: -20};
   if(node.pNum == 1)
