--- a/AV/Development/UnionFindAV.html
+++ b/AV/Development/UnionFindAV.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
   <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
-  <link rel="stylesheet" href="PrimAV.css" type="text/css" />
+  <link rel="stylesheet" href="UnionFindAV.css" type="text/css" />
 </head>
 
 <body>
