--- a/Exercises/List/listAStackPush.html
+++ b/Exercises/List/listAStackPush.html
@@ -95,7 +95,7 @@ Written by Junyang Chen and Cliff Shaffer
     var pointerLeft = {visible: true,
       targetIndex : index,
       anchor: "left top",
-      myAnchor: "right bottom",
+      myAnchor: "right bottom", fixed: "true",
       left: 15,
       top: -20};
     if(pointerTop){
@@ -150,7 +150,6 @@ Written by Junyang Chen and Cliff Shaffer
 
     
     pointerTop = setPointer("top", jsavArr, arr_size);
-    //pointerTop = jsav.pointer("top", jsavArr, {targetIndex:arr_size});
     pointerIndex = arr_size;
    
 
