--- a/Exercises/List/listAStackPop.html
+++ b/Exercises/List/listAStackPop.html
@@ -134,7 +134,9 @@ function f_reset(max_size, arr_size) {
   arrReturn = jsav.ds.array([""], {left:31 * arr_size - ((arr_size>0)?31:0), top : 120});
   labelReturn = jsav.label("return", {left:arrReturn.element.position().left - 45, top : 125});
 
-  pointerTop = jsav.pointer("top", jsavArr, {targetIndex:arr_size});
+  pointerTop = jsav.pointer("top", jsavArr, {
+                              targetIndex : arr_size
+                            });
   pointerIndex = arr_size;
 
   pointerTop.click(pclick);
