--- a/AV/Development/UnionFindAV.html
+++ b/AV/Development/UnionFindAV.html
@@ -6,6 +6,13 @@
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
   <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
   <link rel="stylesheet" href="UnionFindAV.css" type="text/css" />
+  
+  <style>
+    #root, path[data-endnode="root"] {
+    opacity: 0 !important;
+    pointer-events: none;
+   }
+  </style>
 </head>
 
 <body>
