--- a/Exercises/List/StckQMCQqoprtns.html
+++ b/Exercises/List/StckQMCQqoprtns.html
@@ -13,7 +13,7 @@
   <div class="problems">
     <div id="problem-type-or-description">
       <p class="question">The following sequence of operations is
-      performed on a stack: enqueue(1), enqueue(2), dequeue,
+      performed on a queue: enqueue(1), enqueue(2), dequeue,
       enqueue(1), enqueue(2), dequeue, dequeue, dequeue, enqueue(2),
       dequeue. The values will be output in this order:</p>
       <div class="solution"><var>"1,2,1,2,2"</var></div>
