Fixed typo that was causing chapter number to not show on bottom navigation bar.

--- a/RST/source/_themes/haiku/layout.html
+++ b/RST/source/_themes/haiku/layout.html
@@ -115,7 +115,7 @@
         {%- block haikurel3 %}
         {%- endblock %}
         {%- if prev %}
-        «&#160;&#160;<a id="prevm" href="{{ prev.link|e }}">{{ prev.title }}</a>
+        «&#160;&#160;<a id="prevmod1" href="{{ prev.link|e }}">{{ prev.title }}</a>
         &#160;&#160;::&#160;&#160;
         {%- endif %}
         <a  class="uplink" href="{{ pathto(master_doc) }}">{{ _('Contents') }}</a>
