Updates to tree exercises

--- a/AV/Development/BST-insert-proficiency.html
+++ b/AV/Development/BST-insert-proficiency.html
@@ -1,42 +1,43 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
-        <title>BST Insert</title>
-        <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
-        <!-- <link rel="stylesheet" href="opendsaAV.css" type="text/css" /> -->
-        <link rel="stylesheet" href="proficiency.css" type="text/css" />
-        <style>
-          .jsavtreenode {
-            cursor: pointer;
-          }
-          .jsavstacknode {
-            font-size: 1.5em;
-          }
-        </style>
-    </head>
+<head>
+  <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
+  <title>BST Insert</title>
+  <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
+  <!-- <link rel="stylesheet" href="opendsaAV.css" type="text/css" /> -->
+  <link rel="stylesheet" href="proficiency.css" type="text/css" />
+  <style>
+    .jsavtreenode {
+    cursor: pointer;
+    }
+    .jsavstacknode {
+    font-size: 1.5em;
+    }
+  </style>
+</head>
+<body>
+  <h1>BST Insert</h1>
+  <div id="jsavcontainer">
+    <p class="instructLabel">Instructions:</p>
+    <p class="instructions">
+      Use the BST Insert algorithm to insert the values from the
+      stack. Click on a node to move the highlighted value into the
+      binary tree.
+    </p>
+    <p align="center" class="jsavexercisecontrols"></p>
+    <p class="jsavscore"></p>
+  </div>
 
-    <body>
-        <h1>BST Insert</h1>
-        <div id="jsavcontainer">
-            <p class="instructLabel">Instructions:</p>
-            <p class="instructions">
-                    Use the BST Insert algorith to insert the values from the stack. Click on a node to move the highlighted value into the binary tree.
-            </p>
-            <p align="center" class="jsavexercisecontrols"></p>
-        </div>
+  <script src="../../lib/jquery.min.js"></script>
+  <script src="../../lib/jquery-ui.min.js"></script>
+  <script src="../../JSAV/lib/jquery.transform.light.js"></script>
+  <script src="../../JSAV/lib/raphael.js"></script>
+  <script src="../../JSAV/build/JSAV-min.js"></script>
+  <script src="../../lib/odsaUtils.js"></script>
+  <script src="../../lib/odsaAV.js"></script>
+  <script src="stack.js"></script>
 
-        <script
-           src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js">
-        </script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
-        <script src="../../JSAV/lib/jquery.transform.light.js"></script>
-        <script src="../../JSAV/lib/raphael.js"></script>
-        <script src="../../JSAV/build/JSAV.js"></script>
-        <script src="stack.js"></script>
-
-        <script>
-
+  <script>
         var insertArray = [],
             binaryTree,
             stack,
@@ -202,9 +203,12 @@
             $.fx.off = oldfx;
         }
 
-        var exercise = av.exercise(modelSolution, initialize, {}, {feedback: "atend"});
+        var exercise = av.exercise(modelSolution, initialize,
+                                   { "css": "background-color" },
+                                   { controls: $(".jsavexercisecontrols"),
+                                     feedback: "continuous",
+                                     fixmode: "undo" });
         exercise.reset();
-
-        </script>
-    </body>
+  </script>
+</body>
 </html>
