Fixed bug in BST delete grading

--- a/AV/Development/BST-delete-proficiency.html
+++ b/AV/Development/BST-delete-proficiency.html
@@ -257,7 +257,7 @@
 
 
         var exercise = av.exercise(modelSolution, initialize,
-                                   { "css": "background-color" },
+                                   {  }, // no CSS needs to be compared
                                    { controls: $(".jsavexercisecontrols"),
                                      feedback: "continuous",
                                      fixmode: "undo" });
