--- a/AV/Development/UnionFind_SlideShow.html
+++ b/AV/Development/UnionFind_SlideShow.html
@@ -4,29 +4,7 @@
     <meta charset="UTF-8">
     <title>Union Find Slide Show</title>
     <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" media="screen" title="no title" charset="utf-8" />
-    <style>
-    #container {
-      width: 98%;
-      position: relative;
-    }
-    .jsavcounter {
-      position: absolute;
-      top: 15px;
-    }
-    .jsavcanvas { height: 500px; }
-
-    }
-    .jsavoutput {
-      height: 75px;
-    }
-	.jsavline {
-      height: 80px;
-    }
-	#root, path[data-endnode="root"] {
-    opacity: 0 !important;
-    pointer-events: none;
-   }
-    </style>
+	<link rel="stylesheet" href="UnionFind_SlideShow.css" type="text/css" media="screen" title="no title" charset="utf-8" />
   </head>
   <body>
     <h1>Union Find Data Structure</h1>
@@ -42,197 +20,6 @@
     <script src="../../JSAV/lib/jquery.transform.light.js"></script>
     <script src="../../JSAV/lib/raphael.js"></script>
     <script src="../../JSAV/build/JSAV-min.js"></script>
-    <script>
-	var tree;
-	var treeNodes;
-	var parents;
-	var labels;
-	var arr;
-	var i;
-	
-	var jsav = new JSAV("container");
-	
-	arr = new Array(10);
-    //Initializing the labels
-    for (i = 0; i < arr.length; i++) {
-      arr[i] = String.fromCharCode(i + 65);
-    }
-    labels = jsav.ds.array(arr, {left: 450, top: -10, indexed: true});
-    //Rendering the tree on the container
-    //initTree();
-    //Initializing the parent pointer
-    for (i = 0; i < arr.length; i++) {
-      arr[i] = "/";
-    }
-    parents = jsav.ds.array(arr, {left: 450, top: -57});
-    
-	//Displaying Tree Nodes
-	var newNode;
-    tree = jsav.ds.tree({left: 350, top: 90, nodegap: 20});
-    var root = tree.newNode("X");
-    tree.root(root);
-    root.id("root");
-    for (i = 0; i < arr.length; i++) {
-      newNode = tree.newNode(labels.value(i));
-      newNode.size = 1;   //To maintain the size of each connected component
-      root.addChild(newNode);
-    }
-	treeNodes = new Array(10);
-	for (i = 0; i < arr.length; i++) {
-	  treeNodes[i] = tree.root().child(i);
-	}
-    tree.layout();
-	
-	//Processing the Data Structure according to the example in the book
-	var a = treeNodes[0];
-	var b = treeNodes[1];
-	var c = treeNodes[2];
-	var d = treeNodes[3];
-	var e = treeNodes[4];
-	var f = treeNodes[5];
-	var g = treeNodes[6];
-	var h = treeNodes[7];
-	var i = treeNodes[8];
-	var j = treeNodes[9];
-	
-	jsav.displayInit();
-	//Edge (A, B)
-	jsav.umsg("<b><u>Processing Edge (A, B)</b></u><br>");
-	jsav.step();
-	jsav.umsg("The Root of (A) is (A)<br>", {'preserve': true});
-	a.css('background-color', 'yellow');
-	jsav.step();
-	jsav.umsg("The Root of (B) is (B)<br>", {'preserve': true});
-	b.css('background-color', 'yellow');
-	jsav.step();
-	jsav.umsg("Union Nodes (A) and (B)", {'preserve': true});
-	a.addChild(b);	
-	a.css('background-color', 'white');
-	b.css('background-color', 'white');
-	tree.layout();
-	parents.value(1, 0);
-	jsav.step();
-	
-	//Edge (C, H)
-	jsav.umsg("<b><u>Processing Edge (C, H)</b></u><br>");
-	jsav.step();
-	jsav.umsg("The Root of (C) is (C)<br>", {'preserve': true});
-	c.css('background-color', 'yellow');
-	jsav.step();
-	jsav.umsg("The Root of (H) is (H)<br>", {'preserve': true});
-	h.css('background-color', 'yellow');
-	jsav.step();
-	jsav.umsg("Union Nodes (C) and (H)", {'preserve': true});
-	c.addChild(h);	
-	c.css('background-color', 'white');
-	h.css('background-color', 'white');
-	tree.layout();
-	parents.value(7, 2);
-	jsav.step();
-	
-	//Edge (G, F)
-    jsav.umsg("<b><u>Processing Edge (G, F)</b></u><br>");
-	jsav.step();
-	jsav.umsg("The Root of (G) is (G)<br>", {'preserve': true});
-	g.css('background-color', 'yellow');
-	jsav.step();
-	jsav.umsg("The Root of (F) is (F)<br>", {'preserve': true});
-	f.css('background-color', 'yellow');
-	jsav.step();
-	jsav.umsg("Union Nodes (G) and (F)", {'preserve': true});
-	f.addChild(g);	
-	f.css('background-color', 'white');
-	g.css('background-color', 'white');
-	tree.layout();
-	parents.value(6, 5);
-	jsav.step();
-	
-	//Edge (F, I)
-    jsav.umsg("<b><u>Processing Edge (F, I)</b></u><br>");
-	jsav.step();
-	jsav.umsg("The Root of (F) is (F)<br>", {'preserve': true});
-	f.css('background-color', 'yellow');
-	jsav.step();
-	jsav.umsg("The Root of (I) is (I)<br>", {'preserve': true});
-	i.css('background-color', 'yellow');
-	jsav.step();
-	jsav.umsg("Union Nodes (F) and (I)", {'preserve': true});
-	f.addChild(i);	
-	f.css('background-color', 'white');
-	i.css('background-color', 'white');
-	tree.layout();
-	parents.value(8, 5);
-	jsav.step();
-	
-	//Edge (D, E)
-    jsav.umsg("<b><u>Processing Edge (D, E)</b></u><br>");
-	jsav.step();
-	jsav.umsg("The Root of (D) is (D)<br>", {'preserve': true});
-	d.css('background-color', 'yellow');
-	jsav.step();
-	jsav.umsg("The Root of (E) is (E)<br>", {'preserve': true});
-	e.css('background-color', 'yellow');
-	jsav.step();
-	jsav.umsg("Union Nodes (D) and (E)", {'preserve': true});
-	d.addChild(e);	
-	d.css('background-color', 'white');
-	e.css('background-color', 'white');
-	tree.layout();
-	parents.value(4, 3);
-	jsav.step();
-	
-	//Edge (H, A)
-    jsav.umsg("<b><u>Processing Edge (H, A)</b></u><br>");
-	jsav.step();
-	jsav.umsg("The Root of (A) is (A)<br>", {'preserve': true});
-	a.css('background-color', 'yellow');
-	jsav.step();
-	jsav.umsg("The Root of (H) is (C)<br>", {'preserve': true});
-	c.css('background-color', 'yellow');
-	jsav.step();
-	jsav.umsg("Union Nodes (A) and (H)", {'preserve': true});
-	a.addChild(c);	
-	a.css('background-color', 'white');
-	c.css('background-color', 'white');
-	tree.layout();
-	parents.value(2, 0);
-	jsav.step();
-	
-	//Edge (E, G)
-    jsav.umsg("<b><u>Processing Edge (E, G)</b></u><br>");
-	jsav.step();
-	jsav.umsg("The Root of (E) is (D)<br>", {'preserve': true});
-	d.css('background-color', 'yellow');
-	jsav.step();
-	jsav.umsg("The Root of (G) is (F)<br>", {'preserve': true});
-	f.css('background-color', 'yellow');
-	jsav.step();
-	jsav.umsg("Union Nodes (E) and (G)", {'preserve': true});
-	f.addChild(d);	
-	f.css('background-color', 'white');
-	d.css('background-color', 'white');
-	tree.layout();
-	parents.value(3, 5);
-	jsav.step();
-	
-    //Edge (H, E)
-    jsav.umsg("<b><u>Processing Edge (H, E)</b></u><br>");
-	jsav.step();
-	jsav.umsg("The Root of (H) is (A)<br>", {'preserve': true});
-	a.css('background-color', 'yellow');
-	jsav.step();
-	jsav.umsg("The Root of (E) is (F)<br>", {'preserve': true});
-	f.css('background-color', 'yellow');
-	jsav.step();
-	jsav.umsg("Union Nodes (H) and (E)", {'preserve': true});
-	f.addChild(a);	
-	a.css('background-color', 'white');
-	f.css('background-color', 'white');
-	tree.layout();
-	parents.value(0, 5);
-	jsav.step();
-	jsav.umsg("<br><b>Final UnionFind Data Structure</b>", {'preserve': true});
-	jsav.recorded();
-  </script>
+	<script src="UnionFind_SlideShow.js"></script>
   </body>
 </html>
