Update binary tree problems

--- a/Exercises/Binary/DBinFalseMCQ.html
+++ b/Exercises/Binary/DBinFalseMCQ.html
@@ -11,14 +11,21 @@
 <div class="exercise">
   <div class="problems">
     <div id="problem-type-or-description">
-      <p class="question">Select the one true statement.</p>
+      <p class="question">Which statement is false?</p>
       <div class="solution"><var>"Every binary tree has at least one node"</var></div>
       <ul class="choices" data-show="5" data-none="true">
-	<li><var>"Every non-empty tree has exactly one root node"</var></li>
-	<li><var>"Every node has exactly two children"</var></li>
-	<li><var>"Every non-root node has exactly one parent"</var></li>
+	<li><var>"Every non-empty binary tree has exactly one root node"</var></li>
+	<li><var>"Every node in a binary tree has exactly two children"</var></li>
+	<li><var>"Every non-root node in a binary tree has exactly one parent"</var></li>
       </ul>
       <div class="hints">
+	<p>Look carefully at the definition for a binary tree.</p>
+	<p>It states that every binary tree is either empty, or it has
+	  a root node and two binary trees as children.
+	</p>
+	<p>So, every binary tree node has two children, but not every
+	  binary tree has a node.
+	</p>
       </div>
     </div> 
   </div>
