--- a/Exercises/Binary/DCompMinFIB.html
+++ b/Exercises/Binary/DCompMinFIB.html
@@ -12,18 +12,9 @@
   <div class="problems">
     <div id="problem-type-or-description">
       <p class="question">What is the minimum number of nodes in a
-      complete binary tree with height 3?</p>
-      <div class="solution"><var>4</var></div>
-      <ul class="choices" data-category="true">
-	<li><var>3</var></li>
-	<li><var>4</var></li>
-	<li><var>5</var></li>
-	<li><var>6</var></li>
-	<li><var>7</var></li>
-	<li><var>8</var></li>
-	<li><var>11</var></li>
-	<li><var>15</var></li>
-      </ul>
+	complete binary tree with height 4?
+      </p>
+      <div class="solution" data-type="text"><var>8</var></div>
       <div class="hints">
       </div>
     </div> 
