--- a/Exercises/Binary/DFullMinFIB.html
+++ b/Exercises/Binary/DFullMinFIB.html
@@ -11,19 +11,9 @@
 <div class="exercise">
   <div class="problems">
     <div id="problem-type-or-description">
-      <p class="question">What is the minimum number of internal nodes
-      in a binary tree with 8 nodes?</p>
-      <div class="solution"><var>4</var></div>
-      <ul class="choices" data-category="true">
-	<li><var>3</var></li>
-	<li><var>4</var></li>
-	<li><var>5</var></li>
-	<li><var>6</var></li>
-	<li><var>7</var></li>
-	<li><var>8</var></li>
-	<li><var>11</var></li>
-	<li><var>15</var></li>
-      </ul>
+      <p class="question">What is the minimum number of nodes in a
+      full binary tree with height 4?</p>
+      <div class="solution" data-type="text"><var>7</var></div>
       <div class="hints">
       </div>
     </div> 
