--- a/Exercises/List/listLQueueDequeue.html
+++ b/Exercises/List/listLQueueDequeue.html
@@ -118,11 +118,11 @@ function pclick(pointer){
 function setPointer(name, node, opt){
 
   var pointerRight = {anchor: "right top",
-    myAnchor: "left bottom",
+    myAnchor: "left bottom",fixed: "true",
     left: -10,
     top: -20};
   var pointerLeft = {anchor: "left top",
-    myAnchor: "right bottom",
+    myAnchor: "right bottom",fixed: "true",
     left: 15,
     top: -20};
   if(node.pNum == 1)
@@ -441,7 +441,7 @@ function checkAnswer(arr_size) {
 
 <div class="exercise">
   <div class="vars">
-    <var id="arr_size">randRange(1, 6)</var>
+    <var id="arr_size">randRange(4, 6)</var>
     <var id="JSAV">initJSAV(arr_size)</var>
   </div>
 
